master create and send HTML MIME message with subject

--- a/resource/mail_config.json
+++ b/resource/mail_config.json
@@ -3,5 +3,6 @@
     "port":465,
     "userName":"",
     "password":"",
-    "recipients":[]
+    "recipients":[],
+    "subject":"WordPress Alert"
 }
